# aktualizr

./: CMakeLists.txt
src/: CMakeLists.txt
src/libaktualizr/package_manager/: raucmanager.cc  raucmanager.h
src/libaktualizr/primary/: sotauptaneclient.cc
src/libaktualizr/uptane/: tuf.cc
src/rauc_poc/: CMakeLists.txt  main.cc  rauc_poc.h
